k8s-react/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demodash-dashboard
  namespace: default
spec:
  selector:
    app: demodash-dashboard
  ports:
    - name: demodash-dashboard-http
      port: 80
      targetPort: 8080
