k8s-react/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demodash-dashboard-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    ingress.kubernetes.io/proxy-body-size: 500m
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dashboard.demodash.com
    secretName: dashboard.demodash-com
  rules:
  - host: dashboard.demodash.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demodash-dashboard
            port:
              number: 8080
